# src/route/routes.ts
@@ -79,7 +79,9 @@ const models: TsoaRoute.Models = {
         "properties": {
             "nome": {"dataType":"string","required":true},
             "email": {"dataType":"string","required":true},
-            "endereco": {"dataType":"string","required":true},
+            "rua": {"dataType":"string","required":true},
+            "numero": {"dataType":"double","required":true},
+            "cep": {"dataType":"double","required":true},
             "telefone": {"dataType":"string","required":true},
             "cpf": {"dataType":"string","required":true},
         },
@@ -92,7 +94,9 @@ const models: TsoaRoute.Models = {
             "id": {"dataType":"double","required":true},
             "nome": {"dataType":"string","required":true},
             "email": {"dataType":"string","required":true},
-            "endereco": {"dataType":"string","required":true},
+            "rua": {"dataType":"string","required":true},
+            "numero": {"dataType":"double","required":true},
+            "cep": {"dataType":"double","required":true},
             "telefone": {"dataType":"string","required":true},
             "cpf": {"dataType":"string","required":true},
         },
